test_regress/t/t_gen_defparam_bad.out
%Error: t/t_gen_defparam_bad.v:8:25: In defparam, instance id_13 never declared
    8 |    defparam id_13.id_14 = -id_13,
      |                         ^
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: t/t_gen_defparam_bad.v:9:12: In defparam, parameter id_15 never declared
    9 |      id_15 = id_14;
      |            ^
%Error: t/t_gen_defparam_bad.v:11:18: In defparam, parameter id_8 never declared
   11 |    defparam id_8 = 1, id_9 = 1;
      |                  ^
%Error: t/t_gen_defparam_bad.v:11:28: In defparam, parameter id_9 never declared
   11 |    defparam id_8 = 1, id_9 = 1;
      |                            ^
%Error: Exiting due to
